# xhk

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  config.h  config.h.in  config.mk  locales.h  meson.build  xhk.c  xhk.h  xhkpch.h
include/: daemon.h  types.h  util.h  xhk.h
init.d/: xhk.in
src/: util.c  xhk.c  xhk.cpp
